misc cleanup + notes

--- a/iac-admin.css
+++ b/iac-admin.css
@@ -1,3 +1,4 @@
+/* Larger font on site ID */
 #wpadminbar #wp-admin-bar-site-name > a.ab-item {
     line-height: var(--wp-admin--admin-bar--height);
     font-size: 1.6em;
